--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
 </body>
-
 </html>
